Fix text not wrapping in the book divs issue

--- a/style.css
+++ b/style.css
@@ -1,140 +1,158 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
-body{
-    margin:0;   
-    background-color: #E4DCCF;
-    font-family: "Montserrat", sans-serif;
-    word-wrap: break-word;
+body {
+  margin: 0;
+  background-color: #e4dccf;
+  font-family: "Montserrat", sans-serif;
+  word-wrap: break-all;
 }
-#popup{
-   position: fixed;
-   top: 0;
-   left: 0;
-   bottom: 0;
-   width: 100vw;
-   height: 100vh;
-   text-align:center;
-   display: flex;
-   align-items: center;
-   align-content: center;
-   justify-content: center;
-   visibility: hidden;
-   color:#E4DCCF;
-   background-color: rgba(43, 43, 43, 0.3);
+#popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  visibility: hidden;
+  color: #e4dccf;
+  background-color: rgba(43, 43, 43, 0.3);
 }
-#popup button{
-    margin: 0;
-    color:#E4DCCF;
+#popup button {
+  margin: 0;
+  color: #e4dccf;
 }
-#popup button:hover{
-    background-color: #2B2B2B;
+#popup button:hover {
+  background-color: #2b2b2b;
 }
-#popup button:last-child{
-    margin-bottom: 15px;
+#popup button:last-child {
+  margin-bottom: 15px;
 }
-#popup-form{
-    display: flex;
-    flex-direction: column;
-    gap:10px;
-    width: 300px;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    background-color:#423F3E;
-    border-radius: 20px; 
+#popup-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 300px;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  background-color: #423f3e;
+  border-radius: 20px;
 }
 #popup h3 {
-    margin-top:15px;
+  margin-top: 15px;
 }
-#add-popup{
-    width: 100px;
-    height: 40px;
-    margin: 0;
+#add-popup {
+  width: 100px;
+  height: 40px;
+  margin: 0;
 }
-.main-container{
-    display: flex;
-    flex-direction: column;
-    margin:0 auto;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
 .header {
-    background-color: #2B2B2B;
-    height: 8rem;
-    -webkit-box-shadow: 0px 8px 13px -5px rgba(43, 43, 43, 1);
-    -moz-box-shadow: 0px 8px 13px -5px rgba(43, 43, 43, 1);
-    box-shadow: 0px 8px 13px -5px rgba(43, 43, 43, 1);
-    position: relative;
-    z-index: 10;
+  background-color: #2b2b2b;
+  height: 8rem;
+  -webkit-box-shadow: 0px 8px 13px -5px rgba(43, 43, 43, 1);
+  -moz-box-shadow: 0px 8px 13px -5px rgba(43, 43, 43, 1);
+  box-shadow: 0px 8px 13px -5px rgba(43, 43, 43, 1);
+  position: relative;
+  z-index: 10;
 }
-.header-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 20%;
-    height: 100%;
-    color:#F0EBE3;
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 20%;
+  height: 100%;
+  color: #f0ebe3;
 }
-.header-container a{
-    text-decoration: none;
-    color: #F0EBE3;
+.header-container a {
+  text-decoration: none;
+  color: #f0ebe3;
 }
-.header-container a:hover{
-    color: #E4DCCF;
+.header-container a:hover {
+  color: #e4dccf;
 }
-.add-book{
-    background-color: #E4DCCF;
-    text-align: center;
+.add-book {
+  background-color: #e4dccf;
+  text-align: center;
 }
-.add-book button{
-    border:0;
-    width: 160px;
-    height: 60px;
-    font-size: 1.5rem;
-    margin-top: 50px;
-    background-color: transparent;
-    border-radius: 10px;
-    color:#2B2B2B;
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
+.add-book button {
+  border: 0;
+  width: 160px;
+  height: 60px;
+  font-size: 1.5rem;
+  margin-top: 50px;
+  background-color: transparent;
+  border-radius: 10px;
+  color: #2b2b2b;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+}
+.add-book button:hover {
+  background-color: #f0ebe3;
+}
+#books-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  justify-items: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px 80px;
+}
+.book {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 1.3rem;
+  align-items: center;
+  background-color: #f0ebe3;
+  border-radius: 10px;
+  width: 100%;
+  height: 375px;
+  gap: 5px;
+}
+.book button {
+  border: 0;
+  width: 80%;
+  height: 30px;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  color: #2b2b2b;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px;
+  background-color: #adcf9f;
+}
+.book button:hover {
+  background-color: #4e9f3d;
+}
 
+.book button:last-child {
+  border: 0;
+  width: 80%;
+  height: 30px;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  color: #2b2b2b;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px;
+  background-color: #423f3e;
+  color: #e4dccf;
 }
-.add-book button:hover{
-    background-color: #F0EBE3;
-
-}
-#books-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    justify-items: center;
-    align-items: center;
-    gap: 20px;
-    padding: 20px 80px;
-}
-.book{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 1.2rem;
-    align-items: center;
-    background-color: #F0EBE3;
-    border-radius: 10px;
-    width: 100%;
-}
-.book button{
-    border:0;
-    width: 100px;
-    height: 30px;
-    font-size: 1.2rem;
-    background-color: transparent;
-    border-radius: 10px;
-    color:#2B2B2B;
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
-    margin:10px;
-}
-.book button:hover{
-    background-color: #E4DCCF;
-
+.book button:last-child:hover {
+  background-color: #2b2b2b;
+  color: #e4dccf;
 }
 .book p {
-    margin:10px;
+  margin: 10px;
+  word-break: break-all;
 }
